--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
 MortalityTables = "4780e19d-04b9-53dc-86c2-9e9aa59b5a12"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+StructEquality = "6ec83bb0-ed9f-11e9-3b4c-2b04cb4e219c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [weakdeps]
