--- a/Project.toml
+++ b/Project.toml
@@ -23,4 +23,11 @@ PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
 PythonExt = ["PythonCall"]
 
 [compat]
+Accessors = "0.1"
+CSV = "0.10"
+DataFrames = "1"
+Memoize = "0.4"
+MortalityTables = "2"
+Reexport = "1"
+StructEquality = "2"
 julia = "1.9"
