--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ Accessors = "7d9f7c33-5ae7-4f3b-8dc6-eff91059b697"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
 MortalityTables = "4780e19d-04b9-53dc-86c2-9e9aa59b5a12"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
@@ -26,6 +27,7 @@ PythonExt = ["PythonCall"]
 Accessors = "0.1"
 CSV = "0.10"
 DataFrames = "1"
+DocStringExtensions = "0.9"
 Memoize = "0.4"
 MortalityTables = "2"
 Reexport = "1"
